# CMove

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  CMove.cpp  CMove.h  CMove.ui  PathAnalisys.cpp  PathAnalisys.h  PathRepository.cpp  PathRepository.h  main.cpp
DirData/: AnalisysResult.cpp  AnalisysResult.h  PathAnalisys.cpp  PathAnalisys.h
Logging/: Logger.cpp  Logger.h
Processing/: FileProcess.cpp  FileProcess.h  TransactionParametres.cpp  TransactionParametres.h
Settings/: AppSettings.cpp  AppSettings.h
Validation/: Validation.cpp  Validation.h
